--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,13 @@ stages:
   - test
   - deploy
 
+.test_template: &test_template
+  stage: test
+  tags:
+    - docker
+  before_script:
+    - pip --no-cache-dir install -r requirements.txt
+
 .deploy_template: &deploy_template
   stage: deploy
   when: manual
@@ -17,6 +24,17 @@ stages:
     - glue-deployer job-destroy -e ${ENV} -a udl_to_lrf
     - glue-deployer job-create -e ${ENV} -a rdl_to_udl
     - glue-deployer job-create -e ${ENV} -a udl_to_lrf
+
+lint:
+  <<: *test_template
+  allow_failure: true
+  script:
+    - prospector
+
+unit:
+  <<: *test_template
+  script:
+    - python -m unittest discover
 
 deploy to dev:
   <<: *deploy_template
