add auto deploy to gitlab ci on develop
removed whitespace from lrf_to_fdl/hash_mapping.py

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ stages:
 
 .deploy_template: &deploy_template
   stage: deploy
-  when: manual
   tags:
     - docker
   before_script:
@@ -41,3 +40,5 @@ deploy to dev:
     ENV: dev
   environment:
     name: dev
+  only:
+    - develop
