--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ stages:
     - glue-deployer job-destroy -e ${ENV} -a udl_to_lrf
     - glue-deployer job-create -e ${ENV} -a rdl_to_udl
     - glue-deployer job-create -e ${ENV} -a udl_to_lrf
+    - glue-deployer job-create -e ${ENV} -a lrf_to_edw
+    - glue-deployer job-create -e ${ENV} -a lrf_to_fdl
 
 lint:
   <<: *test_template
