--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ stages:
     - glue-deployer job-create -e ${ENV} -a udl_to_lrf
     - glue-deployer job-create -e ${ENV} -a lrf_to_edw
     - glue-deployer job-create -e ${ENV} -a lrf_to_fdl
+    - glue-deployer job-create -e ${ENV} -a rdl_to_prj
 
 lint:
   <<: *test_template
